rename some file and complete prepare data section in final notebook

--- a/Crawl-data.ipynb
+++ b/Crawl-data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Module 1 - Thu thập dữ liệu từ [batdongsan.com.vn](https://batdongsan.com.vn/cho-thue-can-ho-chung-cu)"
+    "# Module 1 - Thu thập dữ liệu từ [nhatot.vn](https://www.nhatot.com/thue-can-ho-chung-cu-tp-ho-chi-minh)"
    ],
    "metadata": {
     "collapsed": false
@@ -28,24 +28,24 @@
     "+ Mỗi trang sẽ chứa 20 tin rao cho thuê, và có khoảng 1000 trang\n",
     "+ Thông tin cần phải thu thập cho mỗi căn hộ:\n",
     "\n",
-    "| Columns            | Description               |\n",
-    "|--------------------|---------------------------|\n",
-    "| ad_id              | id của tin (để phân biệt) |\n",
-    "| list_id            | id trong danh sách        |\n",
-    "| subject            | Tiêu đề của tin           |\n",
-    "| price              | Giá thuê                  |\n",
-    "| size               | Diện tích                 |\n",
-    "| rooms              | Số phòng                  |\n",
-    "| toilets            | Số nhà vệ sinh            |\n",
-    "| area_name          | Quận huyện                |\n",
-    "| region_name        | Thành phố, tỉnh           |\n",
-    "| ward_name          | Phường                    |\n",
-    "| street_name        | Đuờng                     |\n",
-    "| detail_address     | Địa chỉ chi tiết          |\n",
-    "| zero_deposit       | Có cần tiền cọc không?    |\n",
-    "| escrow_can_deposit | Cọc bao nhiêu tháng       |\n",
-    "| longitude          | longitude                 |\n",
-    "| latitude           | latitude                  |"
+    "| Column              | Description               |\n",
+    "|---------------------|---------------------------|\n",
+    "| ad_id               | id của tin (để phân biệt) |\n",
+    "| list_id             | id trong danh sách        |\n",
+    "| subject             | Tiêu đề của tin           |\n",
+    "| price               | Giá thuê                  |\n",
+    "| size                | Diện tích                 |\n",
+    "| rooms               | Số phòng                  |\n",
+    "| toilets             | Số nhà vệ sinh            |\n",
+    "| area_name           | Quận huyện                |\n",
+    "| region_name         | Thành phố, tỉnh           |\n",
+    "| ward_name           | Phường                    |\n",
+    "| street_name         | Đuờng                     |\n",
+    "| detail_address      | Địa chỉ chi tiết          |\n",
+    "| zero_deposit        | Có cần tiền cọc không?    |\n",
+    "| escrow_can_deposit  | Cọc bao nhiêu tháng       |\n",
+    "| longitude           | Kinh độ                   |\n",
+    "| latitude            | Vĩ độ                     |"
    ],
    "metadata": {
     "collapsed": false
